# rs-log-collector

./: .env.example  Cargo.toml
src/: main.rs
src/database/: mod.rs
src/handlers/: log.rs  mod.rs  rotate.rs
src/http/: mod.rs
src/http/api/: mod.rs
src/http/handlers/: log.rs  log_async.rs  log_queue.rs  mod.rs  rotate.rs  router.rs
src/http/middleware/: logger.rs  mod.rs  origin.rs
src/http/service/: sqlx.rs
src/models/: app.rs  async_handler.rs  log_evt.rs  mod.rs
src/utils/: eventbus.rs  hyper_util.rs  lz4_util.rs  mod.rs  zstd_util.rs
