[package]
name = "rs-log-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ntex = { version = "2.0", features = ["tokio"] }
serde_json = "1.0.113"
zstd = "0.13.2"
log = "0.4.22"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
dotenv = "0.15.0"
futures = "0.3.30"
bytes-utils = "0.1.4"

