[package]
name = "rs-log-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.113"
zstd = "0.13.2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
futures = "0.3.30"
bytes-utils = "0.1.4"
base64 = "0.22.1"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }
bytes = "1.5.0"
tokio-signal = "0.2.9"
tower = "0.4.13"
chrono = "0.4.38"
lazy_static = "1.5.0"
lz4_flex = { version = "0.11" }


